# NNengine

./: AUTHORS  NNengine-12.0  README  README.md  aclocal.m4  configure  configure.ac
nnengine-12.0/: README  configure  configure.ac
nnengine-12.0/m4/: ax_gcc_archflag.m4
nnengine-12.0/src/C/: BPNetworkConstants.h  BPNetworkDeclarations.h  BPNetworkDefinitions.h  BPNetworkError.h  BPNetworkStandardInclude.h  CreateBPNetwork.c  ForwardPass.c  Makefile.am  NNengine.c  OperateBPNetwork.c  Random.c
src/C/: BPNetworkConstants.h  BPNetworkDeclarations.h  BPNetworkDefinitions.h  BPNetworkError.h  BPNetworkStandardInclude.h  CreateBPNetwork.c  ForwardPass.c  Makefile.am  NNengine.c  OperateBPNetwork.c  Random.c
